cmake_minimum_required(VERSION 3.27)
project(LeetcodeBasis)

set(CMAKE_CXX_STANDARD 17)

add_executable(LeetcodeBasis
        leetcode/editor/cn/leetcode_num_24.cpp
        leetcode/editor/cn/leetcode_num_160.cpp)

add_executable(leetcode_num_203 leetcode/editor/cn/leetcode_num_203.cpp)
add_executable(leetcode_num_19 leetcode/editor/cn/leetcode_num_19.cpp)
add_executable(leetcode_num_21 leetcode/editor/cn/leetcode_num_21.cpp)
add_executable(leetcode_num_328 leetcode/editor/cn/leetcode_num_328.cpp)
add_executable(leetcode_num_92 leetcode/editor/cn/leetcode_num_92.cpp)
add_executable(leetcode_num_704 leetcode/editor/cn/leetcode_num_704.cpp)
add_executable(leetcode_num_232 leetcode/editor/cn/leetcode_num_232.cpp)