cmake_minimum_required(VERSION 3.27)
project(LeetcodeBasis)

set(CMAKE_CXX_STANDARD 17)

add_executable(LeetcodeBasis
        leetcode/editor/cn/leetcode_num_160.cpp)

add_executable(leetcode_num_203 leetcode/editor/cn/leetcode_num_203.cpp)
add_executable(leetcode_num_19 leetcode/editor/cn/leetcode_num_19.cpp)
add_executable(leetcode_num_21 leetcode/editor/cn/leetcode_num_21.cpp)
add_executable(leetcode_num_328 leetcode/editor/cn/leetcode_num_328.cpp)
add_executable(leetcode_num_92 leetcode/editor/cn/leetcode_num_92.cpp)
add_executable(leetcode_num_704 leetcode/editor/cn/leetcode_num_704.cpp)
add_executable(leetcode_num_232 leetcode/editor/cn/leetcode_num_232.cpp)
add_executable(leetcode_num_27 leetcode/editor/cn/leetcode_num_27.cpp)
add_executable(leetcode_num_977 leetcode/editor/cn/leetcode_num_977.cpp)
add_executable(leetcode_num_209 leetcode/editor/cn/leetcode_num_209.cpp)
add_executable(leetcode_num_242 leetcode/editor/cn/leetcode_num_242.cpp)
add_executable(leetcode_num_349 leetcode/editor/cn/leetcode_num_349.cpp)
add_executable(leetcode_num_59 leetcode/editor/cn/leetcode_num_59.cpp)
add_executable(leetcode_num_707 leetcode/editor/cn/leetcode_num_707.cpp)
add_executable(leetcode_num_24 leetcode/editor/cn/leetcode_num_24.cpp)
add_executable(leetcode_num_1 leetcode/editor/cn/leetcode_num_1.cpp)
add_executable(leetcode_num_142 leetcode/editor/cn/leetcode_num_142.cpp)
add_executable(leetcode_num_454 leetcode/editor/cn/leetcode_num_454.cpp)
add_executable(leetcode_num_144 leetcode/editor/cn/leetcode_num_144.cpp)
add_executable(leetcode_num_145 leetcode/editor/cn/leetcode_num_145.cpp)
add_executable(leetcode_num_94 leetcode/editor/cn/leetcode_num_94.cpp)
add_executable(leetcode_num_15 leetcode/editor/cn/leetcode_num_15.cpp)
add_executable(leetcode_num_18 leetcode/editor/cn/leetcode_num_18.cpp)
add_executable(leetcode_num_344 leetcode/editor/cn/leetcode_num_344.cpp)
add_executable(leetcode_num_459 leetcode/editor/cn/leetcode_num_459.cpp)
add_executable(leetcode_num_151 leetcode/editor/cn/leetcode_num_151.cpp)
add_executable(leetcode_num_225 leetcode/editor/cn/leetcode_num_225.cpp)
add_executable(leetcode_num_20 leetcode/editor/cn/leetcode_num_20.cpp)
add_executable(leetcode_num_1047 leetcode/editor/cn/leetcode_num_1047.cpp)
add_executable(leetcode_num_150 leetcode/editor/cn/leetcode_num_150.cpp)
add_executable(leetcode_num_239 leetcode/editor/cn/leetcode_num_239.cpp)
add_executable(leetcode_num_347 leetcode/editor/cn/leetcode_num_347.cpp)
add_executable(leetcode_num_102 leetcode/editor/cn/leetcode_num_102.cpp)
add_executable(leetcode_num_226 leetcode/editor/cn/leetcode_num_226.cpp)
add_executable(leetcode_num_101 leetcode/editor/cn/leetcode_num_101.cpp)
add_executable(leetcode_num_104 leetcode/editor/cn/leetcode_num_104.cpp)
add_executable(leetcode_num_111 leetcode/editor/cn/leetcode_num_111.cpp)